infrastructure/addons/istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-gw
  namespace: istio-ingress
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - k3s.marianobe.cc
      - marianobe.cc
      - www.marianobe.cc
      - netbird.marianobe.cc
      - turismo.marianobe.cc
    # This was replaced by a more specific redirect in each VirtualService
    # tls:
      # httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
      - k3s.marianobe.cc
      - marianobe.cc
      - www.marianobe.cc
      - netbird.marianobe.cc
      - turismo.marianobe.cc
    tls:
      mode: SIMPLE
      credentialName: k3s-ingress-cert-0
